--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 prismal-app-core = { version = "0.1.0", path = "crates/prismal-app-core" }
 prismal-entry = { version = "0.1.0", path = "crates/prismal-entry" }
+prismal-gfx = { version = "0.1.0", path = "crates/prismal-gfx" }
 prismal-utils = { version = "0.1.0", path = "crates/prismal-utils" }
 
 
