--- a/crates/prismal-window/Cargo.toml
+++ b/crates/prismal-window/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 prismal-app-core = {version = "0.1.0", path = "../prismal-app-core"}
+prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
 winit = "0.26"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
