Change: VSCode settings to use `clippy` for Rust code linting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
     },
     "cSpell.words": [
         "prismal",
+        "unclipped",
         "unsync",
         "webgl",
         "wgpu",
         "Wgsl",
         "Winit"
-    ]
+    ],
+    "rust-analyzer.checkOnSave.command": "clippy"
 }
