--- a/crates/prismal-utils/Cargo.toml
+++ b/crates/prismal-utils/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 interior_mut = "0.1.0"
 pollster = "0.2"
 cfg-if = "1"
+
+parking_lot = { version = "0.12", features = ["nightly"] }
