--- a/crates/prismal-ecs/Cargo.toml
+++ b/crates/prismal-ecs/Cargo.toml
@@ -10,3 +10,8 @@ prismal-ecs-core = { version = "0.1.0", path = "../prismal-ecs-core" }
 prismal-math = { version = "0.1.0", path = "../prismal-math" }
 
 educe = "0.4"
+cfg-if = "1"
+
+[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
+version = "0.3.57"
+features = ["Window", "Performance", "PerformanceTiming"]
