--- a/crates/prismal-entry/Cargo.toml
+++ b/crates/prismal-entry/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 prismal-app-core = {version = "0.1.0", path = "../prismal-app-core"}
+prismal-ecs = {version = "0.1.0", path = "../prismal-ecs"}
 prismal-gfx = {version = "0.1.0", path = "../prismal-gfx"}
 prismal-platform-init = {version = "0.1.0", path = "../prismal-platform-init"}
 prismal-utils = {version = "0.1.0", path = "../prismal-utils"}
