--- a/crates/prismal-ecs/Cargo.toml
+++ b/crates/prismal-ecs/Cargo.toml
@@ -11,6 +11,7 @@ prismal-math = { version = "0.1.0", path = "../prismal-math" }
 
 educe = "0.4"
 cfg-if = "1"
+serde = { version = "1.0", features = ["derive"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
 version = "0.3.57"
