--- a/crates/prismal-gfx/Cargo.toml
+++ b/crates/prismal-gfx/Cargo.toml
@@ -15,6 +15,7 @@ cfg-if = "1"
 wgpu = { version = "0.12", git = "https://github.com/gfx-rs/wgpu.git" }
 thiserror = "1.0"
 educe = "0.4"
+serde = {version = "1.0", features = ["derive"]}
 
 bytemuck = {version = "1.9", features = ["derive"]}
 
