--- a/crates/prismal-ecs/Cargo.toml
+++ b/crates/prismal-ecs/Cargo.toml
@@ -12,6 +12,7 @@ prismal-math = { version = "0.1.0", path = "../prismal-math" }
 educe = "0.4"
 cfg-if = "1"
 serde = { version = "1.0", features = ["derive"] }
+itertools = "0.10"
 
 [target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
 version = "0.3.57"
