--- a/crates/prismal-utils/Cargo.toml
+++ b/crates/prismal-utils/Cargo.toml
@@ -12,3 +12,7 @@ cfg-if = "1"
 
 parking_lot = { version = "0.12", features = ["nightly"] }
 bytemuck = {version = "1.9", features = ["derive"]}
+
+[dependencies.xxhash-rust]
+version = "0.8.5"
+features = ["xxh3", "const_xxh3"]
