--- a/crates/prismal-assets-core/Cargo.toml
+++ b/crates/prismal-assets-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
+downcast = "0.11.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
