--- a/crates/prismal-assets-core/Cargo.toml
+++ b/crates/prismal-assets-core/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 prismal-utils = { version = "0.1.0", path = "../prismal-utils" }
+
 downcast = "0.11.0"
 serde = {version = "1.0", features = ["derive"]}
+thiserror = "1.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
