--- a/examples/sandbox-app/Cargo.toml
+++ b/examples/sandbox-app/Cargo.toml
@@ -14,3 +14,8 @@ log = "0.4"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob = "0.3"
