Add: Basic asset file loading on WASM and desktop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "Wgsl",
         "Winit"
     ],
-    "rust-analyzer.checkOnSave.command": "clippy"
+    "rust-analyzer.checkOnSave.command": "clippy",
+    "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
 }
