Add: `prismal-events` crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ prismal-entry = { version = "0.1.0", path = "crates/prismal-entry" }
 prismal-gfx = { version = "0.1.0", path = "crates/prismal-gfx" }
 prismal-math = { version = "0.1.0", path = "crates/prismal-math" }
 prismal-utils = { version = "0.1.0", path = "crates/prismal-utils" }
+prismal-window = { version = "0.1.0", path = "crates/prismal-window" }
 
 [workspace]
 members = [
