--- a/crates/prismal-entry/Cargo.toml
+++ b/crates/prismal-entry/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 prismal-app-core = {version = "0.1.0", path = "../prismal-app-core"}
 prismal-assets = {version = "0.1.0", path = "../prismal-assets"}
 prismal-ecs = {version = "0.1.0", path = "../prismal-ecs"}
+prismal-events = {version = "0.1.0", path = "../prismal-events"}
 prismal-gfx = {version = "0.1.0", path = "../prismal-gfx"}
 prismal-platform-init = {version = "0.1.0", path = "../prismal-platform-init"}
 prismal-utils = {version = "0.1.0", path = "../prismal-utils"}
