Add: Callback implementation in `prismal-events` crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ prismal-app-core = { version = "0.1.0", path = "crates/prismal-app-core" }
 prismal-assets = { version = "0.1.0", path = "crates/prismal-assets" }
 prismal-ecs = { version = "0.1.0", path = "crates/prismal-ecs" }
 prismal-entry = { version = "0.1.0", path = "crates/prismal-entry" }
+prismal-events = { version = "0.1.0", path = "crates/prismal-events" }
 prismal-gfx = { version = "0.1.0", path = "crates/prismal-gfx" }
 prismal-math = { version = "0.1.0", path = "crates/prismal-math" }
 prismal-utils = { version = "0.1.0", path = "crates/prismal-utils" }
