--- a/crates/prismal-utils/Cargo.toml
+++ b/crates/prismal-utils/Cargo.toml
@@ -11,8 +11,13 @@ pollster = "0.2"
 cfg-if = "1"
 
 parking_lot = { version = "0.12", features = ["nightly"] }
-bytemuck = {version = "1.9", features = ["derive"]}
+bytemuck = { version = "1.9", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.xxhash-rust]
 version = "0.8.5"
 features = ["xxh3", "const_xxh3"]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
+serde_test = "1.0"
