--- a/crates/prismal-utils/Cargo.toml
+++ b/crates/prismal-utils/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 interior_mut = "0.1.0"
 pollster = "0.2"
 cfg-if = "1"
+once_cell = "1.10.0"
 
 parking_lot = { version = "0.12", features = ["nightly"] }
 bytemuck = { version = "1.9", features = ["derive"] }
