--- a/crates/prismal-utils/Cargo.toml
+++ b/crates/prismal-utils/Cargo.toml
@@ -14,6 +14,7 @@ once_cell = "1.10.0"
 parking_lot = { version = "0.12", features = ["nightly"] }
 bytemuck = { version = "1.9", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
+kstring = { version = "2.0", features = ["serde"] }
 
 [dependencies.xxhash-rust]
 version = "0.8.5"
