Change: Include `dev-ecs` branch in CI

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -1,5 +1,7 @@
 version: "0.2"
-ignorePaths: []
+ignorePaths: [
+  ".github/**/*"
+]
 dictionaryDefinitions:
   - name: custom-dictionary
     path: ./.cspell/custom-dictionary.txt
