--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 'dev-ecs' ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ main, dev, 'dev-ecs' ]
 
 env:
   CARGO_TERM_COLOR: always
